--- a/apps/root/src/index.ejs
+++ b/apps/root/src/index.ejs
@@ -33,7 +33,9 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js"
+        "single-spa": "https://cdn.jsdelivr.net/npm/single-spa@5.9.0/lib/system/single-spa.min.js",
+        "react": "https://unpkg.com/react@18/umd/react.development.js",
+        "react-dom": "https://unpkg.com/react-dom@18/umd/react-dom.development.js"
       }
     }
   </script>
